# perception_sdk_ros_pkg

./: CMakeLists.txt  README  manifest.xml  redRoiConfig.cfg
cfg/: perception_sdk_ros_pkg.cfg
lib/: CMakeLists.txt  EuclideanClustering.cpp  EuclideanClustering.h  IterativeClosestPoint.cpp  IterativeClosestPoint.h  PoseEstimationICP.cpp  PoseEstimationICP.h
lib/brics_3d_sdk/features/: Centroid3DEstimation.cpp  Centroid3DEstimation.h
lib/brics_3d_sdk/filtering/: ColorBasedROIExtractorHSV.cpp  ColorBasedROIExtractorHSV.h  IColorBasedROIExtractor.h
lib/brics_3d_sdk/segmentation/: EuclideanClusterExtraction.cpp  EuclideanClusterExtraction.h
lib/brics_3d_sdk/util/: ColorSpaceConvertor.cpp  ColorSpaceConvertor.h  ISimplePointCloudGenerator.h  PCLTypecaster.cpp  PCLTypecaster.h  SimplePointCloudGeneratorCube.cpp  SimplePointCloudGeneratorCube.h
lib/core/: ColorBasedROIExtractorHSV.cpp  ColorBasedROIExtractorHSV.h  ColorSpaceConvertor.cpp  ColorSpaceConvertor.h  IColorBasedROIExtractor.h  SimplePointCloudGeneratorCube.cpp
lib/core/depthPerception/: kinectDataGrabber.cpp  kinectDataGrabber.h
lib/core/features/: Centroid3DEstimation.cpp  Centroid3DEstimation.h
lib/core/filtering/: ColorBasedROIExtractorHSV.cpp  ColorBasedROIExtractorHSV.h  IColorBasedROIExtractor.h
lib/core/segmentation/: EuclideanClusterExtraction.cpp  EuclideanClusterExtraction.h
lib/core/util/: ColorSpaceConvertor.cpp  ColorSpaceConvertor.h  ISimplePointCloudGenerator.h  PCLTypecaster.cpp  PCLTypecaster.h  PointCloud3DToPointCloudDataConvertor.cpp  PointCloud3DToPointCloudDataConvertor.h  SimplePointCloudGeneratorCube.cpp  SimplePointCloudGeneratorCube.h
src/: ColorBasedRoiExtractionNode.cpp  ConfigurePerception.cpp  ControlPerception.cpp  HSVLimitsFinderNode.cpp  ModelFittingICPNode.cpp  ObjectClusterExtractionNode.cpp  PoseEstimation3D.launch  PoseEstimation6D.launch  PoseEstimation6DNode.cpp
src/examples/: ColorBasedRoiExtractor.cpp  ColorBasedRoiExtractor.h  EuclideanClusterExtraction.cpp  EuclideanClusterExtraction.h  EuclideanClusterExtractor.cpp  EuclideanClusterExtractor.h  EuclideanClustering3D.cpp  EuclideanClustering3D.h  ModelFitting.cpp  ModelFitting.h  PoseEstimation6D.cpp  PoseEstimation6D.h  PoseEstimation6DExample.cpp  PoseEstimation6DExample.h
